tests/resource/valid/class/generic_unknown_type_unused.mamba
class MyClass[A: UnknownType]
    def f() -> Int => 10
