tests/resource/invalid/type/function/unexpected_pass.mamba
def f(a: Int) -> Int => pass
